# health-pulse

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SUBMISSION.md  bookmark.md  package-lock.json  package.json
assets/: PROMPT-OPINION-DEMO-GUIDE.md  SUBMISSION.md  VIDEO-SCRIPT-READALONG.md  VIDEO-SCRIPT.md  architecture.md  generate-narration.mjs  health-pulse.md  narration.srt  narration.txt  recording-health-pulse.md  transcribe-narration.mjs
demo/: live_investigation.md
docs/: REMAINING-STEPS.md  devpost-submission.md
mcp-server/: .env.example  Dockerfile  pyproject.toml
mcp-server/src/healthpulse_mcp/: __init__.py  analytics.py  cache.py  domo_client.py  fhir_client.py  server.py  sharp.py  validation.py
mcp-server/src/healthpulse_mcp/resources/: __init__.py
mcp-server/src/healthpulse_mcp/tools/: __init__.py  care_gap_finder.py  cost_efficiency.py  cross_cutting_analysis.py  equity_detector.py  executive_briefing.py  facility_benchmark.py  patient_cohort_analysis.py  patient_experience.py  patient_risk_profile.py  quality_monitor.py  state_ranking.py
mcp-server/tests/: conftest.py  test_analytics.py  test_cache.py  test_care_gap_finder.py  test_cost_efficiency.py  test_cross_cutting.py  test_domo_client.py  test_equity_detector.py  test_executive_briefing.py  test_facility_benchmark.py  test_fhir_client.py  test_integration.py  test_patient_experience.py  test_patient_tools.py  test_quality_monitor.py  test_resources.py  test_sharp.py  test_state_ranking.py  test_validation.py
scripts/: capture-screenshots.mjs  download_cms_data.py  (+14 more)
(+38 files in other folders)
