[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthpulse-mcp"
version = "0.1.0"
description = "Healthcare performance intelligence MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
